<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_principal"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_list" />

        <item
            android:id="@+id/nav_cad"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_cad" />
    </group>

    <item android:title="@string/menu_comunicacao">
        <menu>
            <item
                android:id="@+id/nav_repo"
                android:icon="@drawable/ic_language"
                android:title="@string/menu_repositorio" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

            <!--<item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_outline"
                android:title="@string/menu_about" />-->

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
