<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleCadastrarCampeonato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/titleFont"
        android:text="@string/msg_cadastrar_campeonato"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutNomeCampeonato"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNomeCampeonato"
            android:hint="@string/nomeCampeonato"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDescricaoCampeonato"
        app:counterEnabled="true"
        app:counterMaxLength="60"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescricaoCampeonato"
            android:hint="@string/descricaoCampeonato"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutData"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLength="10"
      >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDtInicio"
            android:hint="@string/dtini"
            android:inputType="text|date" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDataFim"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLength="100"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDtFim"
            android:hint="@string/dtfim"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutLevelMinimo"
        android:inputType="phone"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLevelMinimo"
            android:hint="@string/descricaoLevelMinimo"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCad"
        android:onClick="cadCampeonato"
        style="@style/botao"/>

</LinearLayout>