<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutEditar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleEditarCampeonato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="@dimen/titleFont"
        android:text="@string/msg_editar_campeonato"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHighlight="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutNomeCampeonatoEditar"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNomeCampeonatoEditar"
            android:hint="@string/nomeCampeonato"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDescricaoCampeonatoEditar"
        app:counterEnabled="true"
        app:counterMaxLength="60"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescricaoCampeonatoEditar"
            android:hint="@string/descricaoCampeonato"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDataEditar"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLength="10"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDtInicioEditar"
            android:hint="@string/dtini"
            android:inputType="text|date" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutDataFimEditar"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:maxLength="100"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDtFimEditar"
            android:hint="@string/dtfim"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutLevelMinimoEditar"
        android:inputType="phone"
        app:counterEnabled="true"
        app:counterMaxLength="3"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLevelMinimoEditar"
            android:hint="@string/descricaoLevelMinimo"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonConfirmarEdicao"
        style="@style/botao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_confirmar_edicao" />

</LinearLayout>